04-web/homepage/02-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homepage
  namespace: web
  labels:
    app: homepage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      enableServiceLinks: true
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:latest
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: homepage-config
          mountPath: /app/config
        - name: homepage-logs
          mountPath: /app/config/logs
      volumes:
      - name: homepage-config
        configMap:
          name: homepage-config
      - name: homepage-logs
        emptyDir: {}
