04-web/homepage/04-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: homepage
  namespace: web
spec:
  selector:
    app: homepage
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
